test/scc/decl/semantic-errors/005.t
extern void foo(int a);
extern void foo(int a, float b);